--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
   "name": "angularstatic",
   "version": "0.0.1",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "A simple way to build static templates with Angular",
+  "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/ts-node src/test/test.ts"
+    "test": "node_modules/.bin/ts-node src/test/test.ts",
+    "build": "./node_modules/.bin/tsc && cp package.json dist/packages-dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "angular"
+  ],
+  "author": "David East",
+  "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^4.2.6",
-    "@angular/common": "^4.2.6",
-    "@angular/compiler": "^4.2.6",
-    "@angular/core": "^4.2.6",
-    "@angular/forms": "^4.2.6",
-    "@angular/http": "^4.2.6",
-    "@angular/platform-browser": "^4.2.6",
-    "@angular/platform-browser-dynamic": "^4.2.6",
-    "@angular/platform-server": "^4.2.6",
-    "@angular/router": "^4.2.6",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "ts-node": "^3.2.0",
-    "typescript": "^2.4.1",
+    "typescript": "^2.5.3",
     "zone.js": "^0.8.12"
   }
 }
