--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple way to build static templates with Angular",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/ts-node src/test/test.ts",
-    "build": "rm -rf dist && ./node_modules/.bin/tsc && cp src/package.json dist/packages-dist && cp README.md dist/packages-dist"
+    "test": "mocha dist/packages-dist/index.spec.js",
+    "build": "rm -rf dist && tsc && cp src/package.json dist/packages-dist && cp README.md dist/packages-dist"
   },
   "keywords": [
     "angular"
@@ -22,11 +22,21 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/router": "^4.4.4",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "ts-node": "^3.2.0",
     "typescript": "^2.5.3",
     "zone.js": "^0.8.12"
+  },
+  "devDependencies": {
+    "@types/jasmine": "^2.6.0",
+    "@types/jsdom": "^11.0.2",
+    "jasmine": "^2.8.0",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.1",
+    "rollup": "^0.50.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2"
   }
 }
