--- a/site/package.json
+++ b/site/package.json
@@ -7,5 +7,8 @@
     "angularstatic": "file:angularstatic-0.0.3.tgz",
     "fs-extra": "^4.0.2",
     "ts-node": "^3.3.0"
+  },
+  "devDependencies": {
+    "pretty": "^2.0.0"
   }
 }
